# poker-night-ledger-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py  0002_create_games_and_participants.py  0003_create_ledger_tables.py  0004_create_friendships.py  0005_create_notifications.py  0006_add_shortage_to_games.py  0007_create_game_invitations.py  0008_add_participant_status.py  0009_add_expense_split_unique_constraint.py  0010_create_game_edits.py  0011_add_hidden_at_to_participants.py
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/database/: session.py
backend/app/models/: __init__.py  friendship.py  game.py  game_edit.py  game_invitation.py  ledger.py  notification.py  participant.py  user.py
backend/app/realtime/: events.py  manager.py  personal_manager.py
backend/app/schemas/: friendship.py  game.py  game_edit.py  game_invitation.py  ledger.py  notification.py  participant.py  settlement.py  stats.py  user.py
backend/app/services/: early_cashout_service.py  (+11 more)
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_auth.py  test_close_validation.py  test_early_cashout.py  test_friends.py  test_game_edits.py  test_game_invitations.py  test_games.py  test_health.py  test_history.py  test_ledger.py  test_notifications.py  test_participant_status.py  test_settlement.py  test_settlement_notifications.py  test_shortage.py  test_social.py  test_users.py  test_websocket.py
(+163 files in other folders)
